fix scrollbar color chrome

--- a/obsidianhtml/src/html/css/global_main.css
+++ b/obsidianhtml/src/html/css/global_main.css
@@ -103,7 +103,6 @@ blockquote p {
 ::-webkit-scrollbar {
     width: 0.3rem;
     height: 0.4rem;
-    background-color: var(--bg-note);
 }
 ::-webkit-scrollbar-thumb{
     background-color: var(--code-hightlight-color);
